# just-eat-roulette

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/server/: models.py  server.py
backend/utils/: just_eat.py  models.py
just_eat_roulette/: main.py
just_eat_roulette/server/: models.py  server.py
just_eat_roulette/utils/: just_eat.py  models.py  transforms.py
tests/: test_just_eat_roulette.py
tests/resources/: fixtures.py
tests/test_backend/test_server/: test_server.py
tests/test_backend/utils/: test_transforms.py
