[tool.poetry]
name = "just-eat-roulette"
version = "0.1.0"
description = ""
authors = ["Dave Null <davidnullsworth@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
requests-cache = "^0.9.5"
tabulate = "^0.8.10"
fastapi = {extras = ["all"], version = "^0.79.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "backend"
]

